@@ -3,6 +3,7 @@ Version 0.4.5
 Improvement: Added 'Send selected to SABnzbd' buttons on nzbs.org, to send multiple NZBs to SAB in one click.
 Improvement: Preload graph image in the background to remove flickering.
 Improvement: Added manual refresh menu item.
+Improvement: Allow user to change refresh rate.
 Bugfix: bandwidth graph wasn't working; thanks to Sajid Anwar for the fix.
 
 Version 0.4.4
